gcc/testsuite/rust.test/xfail_compile/func4.rs
fn func() -> i32 { // { dg-error "expected .i32. got ...." }
}

fn main() {
    func();
}
